<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardCornerRadius="16dp"
        android:outlineSpotShadowColor="?attr/colorOnSecondary"
        android:outlineAmbientShadowColor="?colorOnSecondary"
        android:layout_margin="10dp"
        tools:targetApi="p">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="?colorOnPrimary"
            android:contentDescription="@string/image"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintDimensionRatio="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/percent_cardview"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/teal"
            app:cardCornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hundred_percent"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAppearance="?textAppearanceSubtitle1"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/white"
            android:outlineAmbientShadowColor="?attr/colorOnSecondary"
            android:outlineSpotShadowColor="?attr/colorOnSecondary"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/image"
            app:layout_constraintEnd_toStartOf="@+id/percent_cardview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"
            tools:targetApi="p">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/percent_cardview"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/company_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/heart"
                    android:src="@drawable/ic_baseline_favorite_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="#E64C3C" />

                <TextView
                    android:id="@+id/description_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:lines="3"
                    android:text="@string/company_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_textview" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/aqua"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintCircleRadius="16dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rupee"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="@+id/funded_textview"
                app:layout_constraintEnd_toStartOf="@+id/funded_textview"
                app:layout_constraintTop_toTopOf="@+id/funded_textview" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rupee"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="@+id/goal_textview"
                app:layout_constraintEnd_toStartOf="@+id/goal_textview"
                app:layout_constraintTop_toTopOf="@+id/goal_textview" />

            <TextView
                android:id="@+id/funded_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/zero"
                android:textAppearance="?textAppearanceSubtitle2"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/funded"
                app:layout_constraintEnd_toEndOf="@+id/funded"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/funded"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7" />


            <TextView
                android:id="@+id/goal_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/zero"
                android:textAppearance="?textAppearanceSubtitle2"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/goal"
                app:layout_constraintEnd_toEndOf="@+id/goal"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/goal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7" />

            <TextView
                android:id="@+id/remaining_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/zero"
                android:textAppearance="?textAppearanceSubtitle2"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/remaining"
                app:layout_constraintEnd_toEndOf="@+id/remaining"
                app:layout_constraintStart_toStartOf="@+id/remaining"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7" />

            <TextView
                android:id="@+id/funded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/funded"
                android:textAllCaps="true"
                android:textAppearance="?textAppearanceSubtitle1"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/goal"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/goals"
                android:textAllCaps="true"
                android:textAppearance="?textAppearanceSubtitle1"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/remaining"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/funded" />

            <TextView
                android:id="@+id/remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/ends_in"
                android:textAllCaps="true"
                android:textAppearance="?textAppearanceSubtitle1"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/pledge_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/goal" />

            <Button
                android:id="@+id/pledge_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:padding="3dp"
                android:text="@string/pledge"
                android:textColor="@color/teal"
                android:textSize="16sp"
                android:soundEffectsEnabled="true"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/remaining"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/remaining"
                app:layout_constraintTop_toTopOf="@+id/remaining_textview"
                app:layout_constraintVertical_bias="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>